--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.515.0",
+    "musicxml-interfaces": "^0.0.21",
+    "opensheetmusicdisplay": "^1.9.0",
     "pitchy": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
